# nfl-prediction-vCodex

./: .gitignore  AGENTS.md  AI_Task_Backlog.md  Makefile  NFL_Game_Outcome_Prediction_Dev_Plan.md  NFL_Game_Outcome_Prediction_PRD_2025-09-17.md  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: RUNBOOK.md  feature_spec.md  prd_checklist.md  rule_change_policy.md  runbook.md  snapshot_timeline.md
prompts/: AI-001_Create_Repository_Scaffold.md  AI-002_Define_Dependencies_and_Python_Version.md  AI-003_Base_Config_and_Loader.md  AI-004_Logging_Setup.md  AI-005_DuckDB_Helper.md  AI-006_DuckDB_Schemas.md  AI-007_Ingestion_Schedules.md  AI-008_Ingestion_Play_By_Play.md  AI-009_Ingestion_Rosters_Team_Info.md  AI-010_Data_Contracts_Validators.md  AI-011_Feature_Windows_Utilities.md  AI-012_Core_Team_Week_Features.md  AI-013_Rest_Days_and_Kickoff_Bucket.md  AI-014_Travel_Features.md  AI-015_Assemble_MVP_Feature_Matrix.md  AI-016_Modeling_Data_Split.md  AI-017_Modeling_Baseline_Classifier.md  AI-018_Calibration_Platt.md  AI-019_Training_Pipeline.md  AI-020_Inference_Pipeline.md  AI-021_Picks_and_Confidence.md  AI-022_Reporting_Metrics_Reliability.md  AI-023_CLI_Entrypoints.md  AI-024_Visibility_Proxy_MVP.md  AI-025_Tests_Windows_Visibility.md  AI-026_Tests_Travel_Rest.md  AI-027_Tests_Model_Split_Metrics.md  AI-028_Document_MVP_Runbook.md  AI-101_Authoritative_Stadium_Table.md  AI-102_Stadium_Join_Logic.md  AI-103_NWS_Client.md  AI-104_Meteostat_Client.md  AI-105_Weather_Feature_Builder.md  AI-106_Weather_Artifacts_and_Metadata.md  (+36 more)
tests/: test_cli.py  (+44 more)
(+71 files in other folders)
