[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-prediction"
version = "0.0.0"
description = "NFL Game Outcome Prediction — project scaffold"
authors = [{ name = "AI Builder", email = "" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nflreadpy>=0.3.1",
    "pandas>=2.1",
    "duckdb>=0.9",
    "pyarrow>=14",
    "scikit-learn>=1.3",
    "xgboost>=1.7",
    "mlflow>=2.9",
    "shap>=0.44",
    "requests>=2.31",
    "meteostat>=1.6",
    "typer>=0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.urls]
# Populate with canonical repository and documentation links when available.

[project.scripts]
nfl-pred = "nfl_pred.cli:main"
